--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,27 @@
 .size-64{
   font-size: 64px;
 }
+.size-14{
+  font-size: 14px;
+}
+
+#btn-certificate-light{
+  background-color: #1B1C1E;
+  color: white;
+  border: none;
+}
+#btn-certificate-dark{
+  background-color: white;
+  color: #1B1C1E;
+  border: none;
+}
+.btn-learn-more{
+  border: solid 1px;
+}
+.btn-style{
+  outline: none;
+  width :256px;
+  height: 51px; 
+  border-radius: 8px;
+  padding: 10px;
+}
